--- a/chapter8.Rmd
+++ b/chapter8.Rmd
@@ -9,8 +9,10 @@ We made a plot of total murders versus population and noted a strong relationshi
 ```{r}
 library(dslabs)
 data(murders)
+
 population_in_millions <- murders$population/10^6
 total_gun_murders <- murders$total
+
 plot(population_in_millions, total_gun_murders)
 ```
 
@@ -45,8 +47,10 @@ data(murders)
 # Load the datasets and define some variables
 library(dslabs)
 data(murders)
+
 population_in_millions <- murders$population/10^6
 total_gun_murders <- murders$total
+
 plot(population_in_millions, total_gun_murders)
 
 # Transform population using the log10 transformation and save to object log10_population
@@ -80,7 +84,7 @@ plot(log10_population, log10_total_gun_murders)
 `@sct`
 ```{r}
 test_error()
-test_object("log10_population", undefined_msg = "Define log10_population first.", incorrect_msg = "Transform variable using log10.")
+test_object("log10_population", undefined_msg = "Define log10_population first.", incorrect_msg = "Transform variable using log10. Since we are taking the log do not divide by a million.")
 test_object("log10_total_gun_murders", undefined_msg = "Define log10_total_gun_murders first.", incorrect_msg = "Transform variable using log10.")
 test_function("plot",args=c("x","y"), incorrect_msg = "Scatter population on murders.",index=2)
 success_msg("Doesn't that plot look better!")
@@ -172,7 +176,7 @@ library(dslabs)
 
 `@sample_code`
 ```{r}
-# Create a boxplot of state populations by region and specify dataset 
+# Create a boxplot of state populations by region for the murders dataset
 
 ```
 
