--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -35,7 +35,7 @@ Make sure your numbers are within parenthesis and have commas separating them.
 # Here is an example creating a numeric vector named cost
 cost <- c(50, 75, 90, 100, 150)
 
-# Create a numeric vector to store the temperatures listed above into temp
+# Create a numeric vector to store the temperatures listed in the instructions into a vector named temp
 # Make sure to follow the same order in the instructions
 
 ```
@@ -45,7 +45,7 @@ cost <- c(50, 75, 90, 100, 150)
 # Here is an example creating a numeric vector named cost
 cost <- c(50, 75, 90, 100, 150)
 
-# Create a numeric vector to store the temperatures listed above into temp
+# Create a numeric vector to store the temperatures listed in the instructions into a vector named temp
 # Make sure to follow the same order in the instructions
 temp <- c(35, 88, 42, 84, 81, 30)
 ```
@@ -78,7 +78,7 @@ skills: 1
 
 
 `@instructions`
-We will use the same cities as in the previous question (Beijing, Lagos, Paris, Rio de Janeiro, San Juan, and Toronto).
+We will use the cities from the previous question (Beijing, Lagos, Paris, Rio de Janeiro, San Juan, and Toronto).
 Create a vector with the city names and call the object `city`. 
 
 `@hint`
@@ -330,7 +330,7 @@ temp[c(3,5)]
 `@sct`
 ```{r}
 test_error()
-test_output_contains("temp[c(3,5)]", incorrect_msg = "You need to use `c` and parenthesis inside the square brackets. Look at how `temp` is defined in the sample code to determine the entires associated with Paris and San Juan")
+test_output_contains("temp[c(3,5)]", incorrect_msg = "You need to use `c` and parenthesis inside the square brackets. Look at how `temp` is defined in the sample code to determine the entries associated with Paris and San Juan")
 success_msg("Isn't that awesome! Let's move to the next exercise!")
 ```
 
@@ -372,7 +372,7 @@ m <- 32:99
 # Determine the length of object m.
 length(m)
 
-# Create a vector x of integers that starts 12 and ends at 73:
+# Create a vector x of integers that starts 12 and ends at 73.
 
 # Determine the length of object x.
 
@@ -460,7 +460,7 @@ success_msg("Awesome! Let us 'jump' to the next exercise.")
 ---
 ## Sequences and length 
 
-The second argument of the function `seq` is actually a maximum not necessarily the end. So if we type
+The second argument of the function `seq` is actually a maximum, not necessarily the end. So if we type
 
 ```{r}
 seq(7, 50, 7)
@@ -472,7 +472,7 @@ we actually get the same vector of integers as if we type
 seq(7, 49, 7)
 ```
 
-This can be useful becuase sometimes all we want are sequential numbers  that are smaller than some value. 
+This can be useful because sometimes all we want are sequential numbers  that are smaller than some value. 
 
 Let's look at an example.
 
@@ -503,7 +503,7 @@ Use `length` and then `seq` within parentheses.
 seq(7, 49, 7) 
 
 # But note that the second argument does not need to be last number.
-# It simply determines the maximun value permited.
+# It simply determines the maximum value permitted.
 # so the following line of code produces the same vector as seq(7, 49, 7)
 seq(7, 50, 7)
 
@@ -518,7 +518,7 @@ seq(7, 50, 7)
 seq(7, 49, 7) 
 
 # But note that the second argument does not need to be last number.
-# It simply determines the maximun value permited.
+# It simply determines the maximum value permitted.
 # so the following line of code produces the same vector as seq(7, 49, 7)
 seq(7, 50, 7)
 
@@ -537,7 +537,7 @@ success_msg("Great job! Looks like you're getting good with sequences!")
 ---
 ## Sequences of certain length
 
-The `sequence` function has another useful argument. The argument *length.out*. This argument let's us generate sequences that are increasing by the same amount but are of the prespecified length. 
+The `seq()` function has another useful argument. The argument *length.out*. This argument lets us generate sequences that are increasing by the same amount but are of the prespecified length. 
 
 For example, this line of code 
 
