--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -85,7 +85,7 @@ success_msg("Good job! Now you know how to sort data in an ascending order.")
 The function `order()` returns the index vector needed to sort the vector. This implies that `sort(x)` and `x[order(x)]` give the same result.
 
 This can be useful for finding row numbers with certain properties such as "the row for the state with the smallest population". 
-Remember that when we extract a varibale from a data frame the order of the resulting vector is the same as the order of the rows of the data frame. 
+Remember that when we extract a variable from a data frame the order of the resulting vector is the same as the order of the rows of the data frame. 
 So for example, the entries of the vector `murders$state` are ordered in the same way as the states if you go down the rows of `murders`.
 
 ```yaml
@@ -285,7 +285,7 @@ skills: 1
 - Define a variable `states` to be the state names from `murders`
 - Use `rank(murders$population)` to determine the population size rank (from smallest to biggest) of each state. 
 - Save these ranks in an object called `ranks`.
-- Create a data frame with the state name and its rank. Call the data frame `my_df`. 
+- Create a data frame with state names and their respective ranks. Call the data frame `my_df`. 
 
 
 `@hint`
@@ -514,8 +514,8 @@ success_msg("Great job! Now let's move to one last thing in this chapter.")
 ---
 ## Removing NAs 
 
-We previously computed the avearge of `na_example` using `mean(na_example)` and obtain `NA`. This is because the function `mean` returns `NA` if it encounters at least one `NA`.
-A common operation is therefore emoving the entries that are NA and after that perform operations on the rest. 
+We previously computed the average of `na_example` using `mean(na_example)` and obtain `NA`. This is because the function `mean` returns `NA` if it encounters at least one `NA`.
+A common operation is therefore removing the entries that are NA and after that perform operations on the rest. 
 
 
 ```yaml
@@ -601,7 +601,7 @@ key: be5cd4c525
 ```
 This is the end of the programming assignment for this section. 
 
-You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/2a638f36b59f4897b1bd6867ad58f63e/ca59fd4193f943f7b6c653a3b3bda450/?activate_block_id=block-v1%3AHarvardX%2BPH125.1x%2B2T2017%2Btype%40sequential%2Bblock%40ca59fd4193f943f7b6c653a3b3bda450'>course</a>.
 
 If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
 
